==========
sbteclipse
==========

v1.3
====

#20: Multi-module library dependencies support broken
#10: Pretty print Eclipse XML files
#19: Added option for same target directory

v1.2
====

#11: Upgrade to Scalaz 6.0.1
#15: No more exception when using skip-root without sub-projects
#16: Using the new option with-sources will create source attachments for library dependencies

v1.1
====

closes #6: Upgraded to Scalaz 6.0
closes #2: Made project dependencies transitive
re #2: Added example showing nested project dependencies are resolved correctly
closes #3: Removed restriction to Scala 2.9