@@ -4,6 +4,7 @@ This project is a plugin for "SBT 0.10.x":http://github.com/harrah/xsbt/ providi
 
 h2. Changes in latest version
 
+* #21: Duplicate project dependency in Eclipse if normal and test dependency
 * #20: Multi-module library dependencies support broken
 * #10: Pretty print Eclipse XML files
 * #19: Added option for same target directory
@@ -22,7 +23,7 @@ h2. Installing sbteclipse as a SBT plugin
 }
 
 libraryDependencies <<= (libraryDependencies, sbtVersion) { (deps, version) => 
-  deps :+ ("com.typesafe.sbteclipse" %% "sbteclipse" % "1.3-RC2" extra("sbtversion" -> version))
+  deps :+ ("com.typesafe.sbteclipse" %% "sbteclipse" % "1.3-RC3" extra("sbtversion" -> version))
 }
 </code></pre>
 
